<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.patrickwallin.android.mathhistoryquiz.MainActivity">

    <LinearLayout
        style="@style/QuizPaper">

        <LinearLayout
            android:id="@+id/QuizQuestion1"
            style="@style/QuizQuestion">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1)"
                style="@style/QuestionNumbersStyle" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question1"
                    style="@style/QuestionStyle" />

                <EditText
                    android:id="@+id/answerquiz1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AnswerStyle" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/QuizQuestion2"
            style="@style/QuizQuestion">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2)"
                style="@style/QuestionNumbersStyle" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question2"
                        style="@style/QuestionStyle" />

                    <EditText
                        android:id="@+id/answerquiz2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/AnswerStyle" />

                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/QuizQuestion3"
            style="@style/QuizQuestion">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3)"
                style="@style/QuestionNumbersStyle" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3"
                    style="@style/QuestionStyle" />

                <TableLayout
                    android:id="@+id/answerquiz3_table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Maxwell"
                            android:id="@+id/checkBoxMaxwell"
                            android:checked="false" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Wiener"
                            android:id="@+id/checkBoxWiener"
                            android:checked="false" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Newton"
                            android:id="@+id/checkBoxNewton"
                            android:checked="false" />

                    </TableRow>

                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Fermi"
                            android:id="@+id/checkBoxFermi"
                            android:checked="false" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Russell"
                            android:id="@+id/checkBoxRussell"
                            android:checked="false" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Mosely"
                            android:id="@+id/checkBoxMosely"
                            android:checked="false" />

                    </TableRow>

                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Kepler"
                            android:id="@+id/checkBoxKepler"
                            android:checked="false" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Gauss"
                            android:id="@+id/checkBoxGauss"
                            android:checked="false" />

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Oughtred"
                            android:id="@+id/checkBoxOughtred"
                            android:checked="false" />

                    </TableRow>

                    <TableRow
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Leibnitz"
                            android:id="@+id/checkBoxLeibnitz"
                            android:checked="false" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/QuizQuestion4"
            style="@style/QuizQuestion">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4)"
                style="@style/QuestionNumbersStyle" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4"
                    style="@style/QuestionStyle" />

                <RadioGroup
                    android:id="@+id/answerquiz4_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Isaac Newton"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rene Descartes"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Norbert Wiener"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Leonhard Euler"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Leonardo Fibonacci"/>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/QuizQuestion5"
            style="@style/QuizQuestion">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5)"
                style="@style/QuestionNumbersStyle" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5"
                    style="@style/QuestionStyle" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/leonhard_euler"/>

                <RadioGroup
                    android:id="@+id/answerquiz5_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="René Descartes"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Euclid"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="G. F. Bernhard Riemann"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Leonhard Euler"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Carl Friedrich Gauss"/>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="submitAnswers"
            android:text="Submit Answers" />

    </LinearLayout>

</ScrollView>